Fix letter spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@
 input,
 button {
 	font-family: var(--main-font);
+	letter-spacing: 0.1rem;
 }
 
 .container {
